objects/Account.object
<CustomObject>
    <fields>
        <fullName>CAM_Pic__c</fullName>
        <formula>IF(ISBLANK(CAM_ImageURL__c), IMAGE(&quot;https://drive.google.com/uc?&amp;id=0B05cYQRrxSNYZHRNN2R3RUZQUE0&quot;, &quot;Anderson&quot;,75,75), 
IMAGE(CAM_ImageURL__c ,&quot;Bookkeeper Pic&quot;,75,75) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Pic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP_Renewal_Expiration__c</fullName>
        <description>Used in Badge Formula. The expiration is 365 days from this date.</description>
        <inlineHelpText>CAP Expiration is 365 days from this date.</inlineHelpText>
        <label>CAP Renewal Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAP_Start_Date__c</fullName>
        <description>Captures the first Transaction Date for CAP</description>
        <label>CAP Start Date</label>
        <summarizedField>Opportunity.First_Transaction__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.CAP_Eligibility__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CARES_Package__c</fullName>
        <formula>&quot;https://andersonadvisors.com/cares-platinum/?acctclientid=&quot; +  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CARES Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Assigned_Timestamp__c</fullName>
        <label>CSC Assigned Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSR_Email__c</fullName>
        <formula>Assigned_Law_Coordinator_Email__c

/* changed by shobi -LC_email__c*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Success Coordinator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Ext__c</fullName>
        <formula>LC_ext__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Success Coordinator Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Pic__c</fullName>
        <formula>IF(ISBLANK(LC_ImageURL__c),  IMAGE( &quot;https://drive.google.com/uc?&amp;id=0B05cYQRrxSNYZHRNN2R3RUZQUE0&quot;, &quot;Anderson0&quot;,75,75),
IMAGE(LC_ImageURL__c ,&quot;Law Coordinator Pic&quot;,75,75)
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Success Coordinator Pic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <inlineHelpText>The original source of the client.</inlineHelpText>
        <label>Parent Client Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone2__c</fullName>
        <formula>Spouse_Contact__r.MobilePhone</formula>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone3__c</fullName>
        <formula>Business_Partner_Contact__r.MobilePhone</formula>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone4__c</fullName>
        <formula>Second_Business_Partner_Contact__r.MobilePhone</formula>
        <label>Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Client_Source__c</fullName>
        <inlineHelpText>The original child campaign source of the client.</inlineHelpText>
        <label>Child Client Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Action_Result__c</fullName>
        <label>Client Action Result</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Actions__c</fullName>
        <description>SCH-0043</description>
        <inlineHelpText>Choose the type of action and save the record. The result will appear in the &apos;Client Action Result&apos; field below.</inlineHelpText>
        <label>Client Actions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail - Item Uploaded to Box - Email Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Mail - Item Uploaded to Box - Email Primary Contact Spouse</fullName>
                </value>
                <value>
                    <fullName>Mail - Item Uploaded to Box - Email Business Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Credit__c</fullName>
        <label>Client Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Personal_Notes_help_box__c</fullName>
        <inlineHelpText>Client Personal information</inlineHelpText>
        <label>Client Personal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Signature_Line__c</fullName>
        <formula>(IF(ISBLANK( First_Name__c ), NULL, 
&quot;_______________________________________________ &quot;&amp; 
First_Name__c + &quot; &quot; + Last_Name__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Signature Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Signed_Up_for_AP_Event__c</fullName>
        <label>Client Signed Up for AP Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Statement_Form__c</fullName>
        <formula>&quot;https://www.tfaforms.com/4707353?AccId=&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Statement Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Active-Platinum</fullName>
                </value>
                <value>
                    <fullName>Active-Non-Platinum</fullName>
                </value>
                <value>
                    <fullName>Non-Active</fullName>
                </value>
                <value>
                    <fullName>Opted Out of Nurture Calls</fullName>
                </value>
                <value>
                    <fullName>Do Not Call At All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Success_Coordinator_Admin__c</fullName>
        <label>Client Success Coordinator Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Success_Coordinator_Admin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_s_Anderson_Story_help_box__c</fullName>
        <inlineHelpText>This section should explain why the Blueprint is structured the way it is.</inlineHelpText>
        <label>Client’s Anderson Story</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Lead_Type__c</fullName>
        <inlineHelpText>Used to define where the client account originally came from - an Anderson or Infinity Lead Source.</inlineHelpText>
        <label>Company Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson</fullName>
                </value>
                <value>
                    <fullName>Infinity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Note__c</fullName>
        <label>Contact Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Assistance_Program__c</fullName>
        <formula>IF(AND(OR(TODAY()&lt;= DATEVALUE(CAP_Start_Date__c) + 365,TODAY()&lt;= Adjusted_CAP_Date__c + 365), Refunded_CAP__c=False),
IMAGE(Base_Url__c +&quot;resource/1658494865000/Badge_CAP&quot;, &quot;Corporate Assistance Program&quot;, 55, 110), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Corporate Assistance Program (CAP) Badge if the Client is entitled to the service.</inlineHelpText>
        <label>Company Assistance Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Headquarters__c</fullName>
        <formula>IF(
AND(
OR(
$Profile.Id = &quot;00e0B000000ZyMm&quot;,
$Profile.Id = &quot;00eU0000000nGPz&quot;),
Refunded_Corporate_Headquarters__c = False,
NOT(ISBLANK(Green_Corp_HQ_Date__c)),
TODAY() &lt; (Green_Corp_HQ_Date__c + 730),
ISBLANK(Nexus_Current__c)),
IMAGE(&quot;https://platinum.force.com/renewaladvisors2/servlet/servlet.FileDownload?file=0150B000006mQb8&quot;, &quot;Green HQ&quot;),

IF(
AND(Nexus_Current__c &gt;= today(), Refunded_Corporate_Headquarters__c = False ),
IMAGE(&quot;https://andersonadvisors.my.salesforce.com/resource/1491086434000/Nexus&quot;, &quot;Nexus&quot;),
IF( Mail_Forwarding__c &gt;= today(),
IMAGE(&quot;https://platinum.force.com/aba/resource/1491086495000/MailForwarding&quot;, &quot;MailForwarding&quot;),

IF(
AND(
Titanium__c &gt; 0,
Refunded_Corporate_Headquarters__c = False,
Nexus_Current__c &gt;= today()),
IMAGE(&quot;https://andersonadvisors.my.salesforce.com/resource/1491086434000/Nexus&quot;, &quot;Nexus&quot;),
NULL))))</formula>
        <inlineHelpText>A green &quot;Corp. HQ&quot; icon indicates the client is a Vertucci with full Corp HQ services for up to two years or until the icon changes.</inlineHelpText>
        <label>Corporate Headquarters/Mail Forwarding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Available__c</fullName>
        <formula>- Credit_sales_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <formula>IF(  Credit_Available__c &gt; 0, IMAGE( Base_Url__c + &quot;resource/1590268441000/Credit&quot;, &quot;Credit&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_sales_Rollup__c</fullName>
        <label>Credit sales Rollup</label>
        <summarizedField>Opportunity.ChargentSFA__Balance_Due__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Credit</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Audit_Status__c</fullName>
        <label>Current Audit Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_NOT_CALL_TILL_AFTER__c</fullName>
        <label>DO NOT CALL TILL AFTER</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Account_Stage__c</fullName>
        <inlineHelpText>Indicates the stage of the customer life cycle</inlineHelpText>
        <label>Account Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Untouched</fullName>
                </value>
                <value>
                    <fullName>Cur. Effort</fullName>
                </value>
                <value>
                    <fullName>Past Effort</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Meeting, no Opportunity</fullName>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Account_Status__c</fullName>
        <formula>TEXT(DaScoopComposer__Account_Stage__c)
&amp; 
IF (
  AND(ISPICKVAL(DaScoopComposer__Account_Stage__c, &apos;Cur. Effort&apos;), ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;Recent Engagement&apos;)),
  &apos; + Engagement&apos;,
  &apos;&apos;
)
&amp;
IF (
  AND(ISPICKVAL(DaScoopComposer__Account_Stage__c, &apos;Cur. Effort&apos;), NOT(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;Recent Engagement&apos;))),
  &apos; no Engagement&apos;,
  &apos;&apos;
)
&amp;
IF (
  AND(ISPICKVAL(DaScoopComposer__Account_Stage__c, &apos;Past Effort&apos;), ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;Past Engagement&apos;)),
  &apos; + Engagement&apos;,
  &apos;&apos;
)
&amp;
IF (
  AND(ISPICKVAL(DaScoopComposer__Account_Stage__c, &apos;Past Effort&apos;), ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;No Engagement&apos;)),
  &apos; no Engagement&apos;,
  &apos;&apos;
)</formula>
        <inlineHelpText>Indicates the account status by looking at the activity history and opportunities. This field is automatically updated by Groove.</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Account_Tags__c</fullName>
        <inlineHelpText>Indicates specific tags on the account by looking at activities and opportunities.</inlineHelpText>
        <label>Account Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Untouched</fullName>
                </value>
                <value>
                    <fullName>Cur. Effort</fullName>
                </value>
                <value>
                    <fullName>Past Effort</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Meeting, no Opportunity</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity</fullName>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Churned Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Alias_1__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Alias_2__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Churned_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates, whether this is a churned customer based on your business specific signals</inlineHelpText>
        <label>Churned Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain_1__c</fullName>
        <inlineHelpText>indicates the primary email domain of the account. This is evaluated by Groove periodically</inlineHelpText>
        <label>Domain 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain_2__c</fullName>
        <inlineHelpText>indicates the secondary email domain of the account (in case they have more than one). This is evaluated by Groove periodically</inlineHelpText>
        <label>Domain 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Dont_Match_Leads_to_this_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether Groove will automatically match leads to this account.</inlineHelpText>
        <label>Don&apos;t Match Leads to this Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Engagement_Status__c</fullName>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Past Engagement</fullName>
                </value>
                <value>
                    <fullName>Recent Engagement</fullName>
                </value>
                <value>
                    <fullName>No Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Notes__c</fullName>
        <inlineHelpText>Contains notes that are surfaced in Groove&apos;s sidebar by default.</inlineHelpText>
        <label>Groove Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Hash_1__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Hash_2__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Hash_3__c</fullName>
        <inlineHelpText>A helper field added by Groove</inlineHelpText>
        <label>Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Inferred_Status__c</fullName>
        <formula>IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Churned Customer&apos;), &apos;Churned Customer&apos;,

  IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Current Customer&apos;), &apos;Current Customer&apos;,

    IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Lost Opportunity&apos;), &apos;Lost Opportunity&apos;
    &amp; IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Cur. Effort&apos;), &apos; + Cur. Effort&apos;, &apos;&apos;),

      IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Open Opportunity&apos;), &apos;Open Opportunity&apos;,

        IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Meeting, no Opportunity&apos;), &apos;Meeting, no Opportunity&apos;,

          IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Meeting Scheduled&apos;), &apos;Meeting Scheduled&apos;,

            IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Past Effort&apos;), &apos;Past Effort&apos;
            &amp; IF(NOT(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;No Engagement&apos;)), &apos; + Engagement&apos;, &apos;&apos;)
            &amp; IF(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;No Engagement&apos;), &apos; no Engagement&apos;, &apos;&apos;),

              IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Cur. Effort&apos;), &apos;Cur. Effort&apos;
              &amp; IF(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;Recent Engagement&apos;), &apos; + Engagement&apos;, &apos;&apos;)
              &amp; IF(NOT(ISPICKVAL(DaScoopComposer__Engagement_Status__c, &apos;Recent Engagement&apos;)), &apos; no Engagement&apos;, &apos;&apos;),

                IF(INCLUDES(DaScoopComposer__Account_Tags__c, &apos;Untouched&apos;), &apos;Untouched&apos;,
                  &apos;Unknown&apos;
                )
              )
            )
          )
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the account status in the typical customer life cycle of an account. The status is automatically inferred by looking at activities, engagement signals and opportunities.</inlineHelpText>
        <label>Inferred Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with Data Loader to trigger a mass update of accounts when needed.</description>
        <label>Data Loader Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_User_Advisor_Notes__c</fullName>
        <label>Advisor Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_User_Partner_Notes__c</fullName>
        <label>Partner Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Audit__c</fullName>
        <inlineHelpText>Input date when &apos;Account Audit Status&apos; is completed.</inlineHelpText>
        <label>Date of Last Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>today()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deed_Package_Fulfillment__c</fullName>
        <description>Deed Package Fulfillment</description>
        <label>Deed Package Fulfillment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deed_Spouses_Name__c</fullName>
        <label>Spouses name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Mail_Fowarding__c</fullName>
        <formula>CASE(Mail_Forwarding_Type__c, 
&quot;Digital Mail Forwarding&quot;, IMAGE(&quot;https://andersonadvisors--c.na132.visual.force.com/resource/1560879609000/digital_mail_forward_tmp&quot;, &quot;Digital Mail Forwarding&quot;),
&quot;Physical Mail Forwarding&quot;, IMAGE(&quot;https://andersonadvisors--c.na132.visual.force.com/resource/1561140622000/physical_mail_forwarding&quot;, &quot;Physical Mail Forwarding&quot;), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Mail Fowarding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Products_count__c</fullName>
        <label>Digital Products count</label>
        <summaryFilterItems>
            <field>Opportunity.HasDigitalProducts__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Edited and used when user requests &quot;all clients in X mile radius of Y&quot;</description>
        <formula>DISTANCE(  GEOLOCATION(BillingLatitude, BillingLongitude)   , GEOLOCATION(39.103119 ,-84.512016), &apos;mi&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the client does not wish to be called.</inlineHelpText>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to prevent automated merges.</inlineHelpText>
        <label>Do Not Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, a sale cannot be added to the client&apos;s account.</inlineHelpText>
        <label>Do Not Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_use_Quickbooks__c</fullName>
        <label>Do you currently use Quickbooks</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocumentSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DocumentSigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_flips__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Client does flips?</description>
        <label>Does flips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drop_Box_Name__c</fullName>
        <label>Drop Box Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <externalId>true</externalId>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <formula>Spouse_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email3__c</fullName>
        <formula>Business_Partner_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email4__c</fullName>
        <formula>Second_Business_Partner_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the client does not wish to be emailed.</inlineHelpText>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Count__c</fullName>
        <label>Entity Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Purchased__c</fullName>
        <description>How many purchased?</description>
        <label>Entity Purchased</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_assignment__c</fullName>
        <label>Name of Entity holding assignment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Call_Made__c</fullName>
        <description>For Event Advisors to click when they made an initial call to pull the client out of the &quot;Platinum - Event View&quot; Account List.</description>
        <inlineHelpText>For Event Advisors to click when they made an initial call to pull the client out of the &quot;Platinum - Event View&quot; Account List.</inlineHelpText>
        <label>Event Call Made</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Call Made</fullName>
                </value>
                <value>
                    <fullName>Do Not Call for Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Notes__c</fullName>
        <label>Event Notes</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Snapshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Snapshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_lead__c</fullName>
        <label>Event lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Living_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Living Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filing_Fees__c</fullName>
        <formula>IF(Unpaid_Filing_Fees__c&gt;0, 
IMAGE( Base_Url__c + &quot;resource/1491101164000/Overdue&quot;, &quot;Overdue&quot;, 30, 150 ),
&quot;&quot;)</formula>
        <label>Filing Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Analyst__c</fullName>
        <label>Financial Analyst</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Anderson_Financial_Analyst</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Closed_Sale_Affiliate__c</fullName>
        <label>First Closed Sale (Affiliate)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Closed_Sale_Date__c</fullName>
        <inlineHelpText>Date of the first transaction that was &apos;Approved&apos; and &apos;Charge&apos;.</inlineHelpText>
        <label>First Closed Sale Date</label>
        <summarizedField>Opportunity.First_Transaction__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Entity_Formation_Sale__c</fullName>
        <label>First Entity Formation Sale</label>
        <type>DateTime</type>
    </fields>
</CustomObject>